--- a/project-pizzeria/src/sass/partials/_booking.scss
+++ b/project-pizzeria/src/sass/partials/_booking.scss
@@ -173,6 +173,7 @@
       }
 
     }
+    
   }
 
   [data-table="1"] {
@@ -197,4 +198,8 @@
 .booking-options {
   @include flex(row, flex-start, space-between);
   margin: ($base-size * 4) auto;
+}
+.selected {
+  color: lighten(rgb(13, 97, 2), 10%);
+  border: 3px solid greenyellow;
 }
