--- a/project-pizzeria/src/sass/style.scss
+++ b/project-pizzeria/src/sass/style.scss
@@ -1,10 +1,10 @@
-@import 'partials/settings';
-@import 'partials/typography';
-@import 'partials/global';
-@import 'partials/elements';
+@import 'partials/_settings';
+@import 'partials/_typography';
+@import 'partials/_global';
+@import 'partials/_elements';
 
-@import 'partials/header';
-@import 'partials/cart';
+@import 'partials/_header';
+@import 'partials/_cart';
 
-@import 'partials/product';
-@import 'partials/booking';
+@import 'partials/_product';
+@import 'partials/_booking';
