--- a/project-pizzeria/src/sass/style.css
+++ b/project-pizzeria/src/sass/style.css
@@ -749,9 +749,17 @@ input.error, select.error {
   border-radius: 50%;
 }
 
+.floor-plan .table.selected {
+  color: #149303;
+  border: 3px solid greenyellow;
+  transform: rotate(405deg);
+  font-size: 14px;
+  transition: 0.5s;
+}
+
 .floor-plan .table.booked {
   cursor: not-allowed;
-  color: white;
+  color: #999999;
 }
 
 .floor-plan .table.booked::after {
