--- a/project-pizzeria/src/sass/partials/_cart.scss
+++ b/project-pizzeria/src/sass/partials/_cart.scss
@@ -157,3 +157,15 @@
   }
 
 }
+
+@media (max-width: 590px) {
+  .cart{
+    width: 230px;
+    .fa-trash-alt{
+      transform: scale(1.2);
+    }
+    .fa-pencil-alt{
+      display: none;
+    }
+  }
+}
